# resona

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/: README.md  detect_events.py  evaluate_sed.py  extract_embeddings.py
resona/: __init__.py  _typing.py  cli.py  datasets.py  eventio.py  exceptions.py  features.py  io.py  metrics.py  pipeline.py  windowing.py
resona/detection/: __init__.py  base.py  energy.py  eventio.py  events.py  postprocess.py  threshold.py
resona/embeddings/: __init__.py  base.py  logmel.py  mfcc.py  spectral.py
tests/: conftest.py  test_cli.py  test_detection.py  test_embeddings.py  test_features.py  test_io.py  test_metrics.py  test_version.py  test_windowing.py
