[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resona"
version = "0.0.0"
description = "Lightweight, NumPy-first toolkit for audio embeddings and sound-event detection"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mingyan Yang", email = "292125771+hazelp343@users.noreply.github.com" }]
keywords = ["audio", "embeddings", "sound-event-detection", "sed", "mfcc", "spectrogram"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
soundfile = ["soundfile>=0.12"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/hazelp343/resona"
Repository = "https://github.com/hazelp343/resona"
Issues = "https://github.com/hazelp343/resona/issues"
Changelog = "https://github.com/hazelp343/resona/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["resona"]

[tool.ruff]
line-length = 99
target-version = "py39"
src = ["resona", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF", "NPY"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"examples/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["soundfile"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["resona"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
